@@ -27,7 +27,7 @@ module REXML
             break
           when :end_doctype
             context = context[1]
-          when :start_element, :doctype
+          when :start_element, :start_doctype
             context << event
             event[1,0] = [context]
             context = event
